css/index.css
#intro {
  margin-top: 1rem;
  margin-bottom: 1rem;
  padding: 1rem;
}

header {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-between;
}

.heading {
  font-size: 3rem;
  font-style: italic;
  color: #8bc462;

  margin-top: 1rem;
}

a {
  color: cornflowerblue;
  text-decoration: none;
  font-family: sans-serif;
  font-size: 0.9rem;
  font-weight: 500;
}

a:hover {
  text-decoration: underline;
  text-decoration-style: dashed;
  text-decoration-thickness: 2px;
  font-weight: 600;
}

menu {
  margin: 0;
  padding: 0;
  padding-top: 1rem;

  display: flex;
  flex-wrap: wrap;
  gap: 1rem;
}

menu > li,
menu > li > a {
  display: inline;
  width: fit-content;
  padding: 0.2rem;

  color: inherit;
  font-size: 1.3rem;
}

menu > li:hover {
  background: #8bc462;
  color: rgb(27, 27, 27);
}

li > a {
  text-decoration: none;
  font-family: sans-serif;
}

ul {
  padding: 0;
  list-style: none;

  display: grid;
  grid-template-columns: repeat(
    auto-fit,
    minmax(min(var(--var-card-width), 100%), 1fr)
  );
  gap: 1rem;
}

article {
  display: grid;
  padding: 1.25rem;
  max-width: var(--var-card-width);
}

article:hover {
  background: rgb(10, 10, 10);
}

article > p {
  width: 90%;
  margin: 5px;
}

.preview {
  aspect-ratio: 2/1.3;
  object-fit: cover;
  width: var(--var-card-width);
  max-width: 100%;
  border: 1px solid black;
}

#profile {
  width: 40%;
  margin: 0;
  margin-top: 1rem;

  position: relative;

  background-image: url("/assets/hero.webp");
  background-repeat: no-repeat;
  background-size: cover;
}

figcaption {
  position: absolute;
  bottom: 0;
  right: 0;
}

figcaption a {
  background: rgba(255, 255, 255, 0.7);
  padding: 3px;
}

#about {
  width: 55%;
}

@media (max-width: 800px) {
  .heading {
    font-size: 2.2rem;
  }

  #intro,
  #about {
    width: min(500px, 100%);
  }

  #profile {
    width: 90%;
    height: 10rem;
  }
}

